# ot-harjoitustyo

./: README.md
aavelabyrintti/: .coveragerc  .gitignore  .pylintrc  pyproject.toml  tasks.py
aavelabyrintti/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
aavelabyrintti/src/: build.py  db.py  ghost.py  index.py  init_db.py  map.py  player.py
aavelabyrintti/src/entities/: constants.py  map_list.py
aavelabyrintti/src/images/: images.py
aavelabyrintti/src/repositories/: results_repository.py
aavelabyrintti/src/services/: ghost.py  player.py  results.py
aavelabyrintti/src/tests/: ghost_test.py  player_test.py
aavelabyrintti/src/tests/repositories/: results_repository_test.py
aavelabyrintti/src/ui/: main.py
dokumentaatio/: vaatimusmaarittely.md
laskarit/: komentorivi.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli_kaavio.md
