[tool.poetry]
name = "aavelabyrintti"
version = "0.1.0"
description = ""
authors = ["Lotta Hyppyrä <lotta@hyppyra.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.3"
pygame-textinput = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
